--- a/src/template.html
+++ b/src/template.html
@@ -13,8 +13,6 @@
             <button>About</button>
         </nav>
     </header>
-    <div id="content">
-        
-    </div>
+    <div id="content"></div>
 </body>
 </html>
